syntax = "proto2";

package ZilliqaMessage;

// ============================================================================
// Primitives
// ============================================================================

message ByteArray
{
    required bytes data = 1;
}

message ProtoTransactionCoreInfo
{
    required uint32 version      = 1;
    required uint64 nonce        = 2;
    required bytes toaddr           = 3;
    required ByteArray senderpubkey = 4;
    required ByteArray amount       = 5;
    required ByteArray gasprice     = 6;
    required uint64 gaslimit     = 7;
    required bytes code             = 8;
    required bytes data             = 9;
}

message ProtoTransaction
{
    required bytes tranid                  = 1;
    required ProtoTransactionCoreInfo info = 2;
    required ByteArray signature           = 3;
}

message ProtoTransactionReceipt
{
    required bytes receipt    = 1;
    required uint64 cumgas = 2;
}

message ProtoTransactionWithReceipt
{
    required ProtoTransaction transaction    = 1;
    required ProtoTransactionReceipt receipt = 2;
}

